ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/hello$ /hello/ permanent;
      sub_filter 'href="/' 'href="/hello/';
      sub_filter 'src="/' 'src="/hello/';
      sub_filter_once off;
      sub_filter_types text/html text/css application/javascript;
      proxy_set_header Accept-Encoding "";
spec:
  ingressClassName: public
  tls:
    - hosts:
        - thebrainsurf.site
      secretName: thebrainsurf-tls
  rules:
    - host: thebrainsurf.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-proxy
                port:
                  number: 80
    - host: thebrainsurf.site
      http:
        paths:
          - path: /hello/
            pathType: Prefix
            backend:
              service:
                name: hello-proxy
                port:
                  number: 80
